[gd_scene load_steps=14 format=3 uid="uid://syml82g5vinx"]

[ext_resource type="Script" uid="uid://nsb4x8slipan" path="res://inicio/scripts/guide.gd" id="1_7otfl"]
[ext_resource type="Texture2D" uid="uid://drwvedr4q2k2r" path="res://inicio/image/2.png" id="1_luty5"]
[ext_resource type="Texture2D" uid="uid://b61vhtpnba2pc" path="res://inicio/image/4.png" id="2_y6rs7"]
[ext_resource type="Texture2D" uid="uid://bttb5a51g32u0" path="res://inicio/buttons/flecha1.tres" id="3_7otfl"]
[ext_resource type="Texture2D" uid="uid://bjcu2g1i17j02" path="res://inicio/buttons/flecha1press.tres" id="4_en21w"]
[ext_resource type="Texture2D" uid="uid://gecmanh6q7vl" path="res://inicio/buttons/flecha2.tres" id="5_qcwdr"]
[ext_resource type="Texture2D" uid="uid://4xtu8y4vfq6t" path="res://inicio/buttons/flecha2press.tres" id="6_7q4e7"]
[ext_resource type="Texture2D" uid="uid://d4ni14x8nl2n" path="res://inicio/buttons/musicaButton.tres" id="8_o4e8y"]
[ext_resource type="Script" uid="uid://d4jgkqfp5ly5q" path="res://inicio/musica_button.gd" id="9_of72q"]
[ext_resource type="Texture2D" uid="uid://cnb28n6ptqrsp" path="res://inicio/buttons/atrasButton.tres" id="10_risc7"]
[ext_resource type="Texture2D" uid="uid://b78l0b3x6dnqr" path="res://inicio/buttons/atrasPressButton.tres" id="11_ga0hu"]
[ext_resource type="Script" uid="uid://duww8cqcmif17" path="res://inicio/menu_button.gd" id="12_54rfk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0s7am"]
texture = ExtResource("1_luty5")

[node name="Guide" type="Node2D"]
script = ExtResource("1_7otfl")

[node name="Panel" type="Panel" parent="."]
offset_right = 1153.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_0s7am")

[node name="SlideImage" type="TextureRect" parent="."]
offset_left = 168.0
offset_top = 112.0
offset_right = 976.0
offset_bottom = 552.0
texture = ExtResource("2_y6rs7")
expand_mode = 1

[node name="Flecha1Button" type="TextureButton" parent="."]
offset_left = 168.0
offset_top = 560.0
offset_right = 186.0
offset_bottom = 579.0
scale = Vector2(3.5, 3.5)
texture_normal = ExtResource("5_qcwdr")
texture_pressed = ExtResource("6_7q4e7")
texture_hover = ExtResource("6_7q4e7")

[node name="FlechaButton" type="TextureButton" parent="."]
offset_left = 912.0
offset_top = 560.0
offset_right = 929.0
offset_bottom = 577.0
scale = Vector2(3.5, 3.5)
texture_normal = ExtResource("3_7otfl")
texture_pressed = ExtResource("4_en21w")
texture_hover = ExtResource("4_en21w")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 304.0
offset_top = 360.0
offset_right = 568.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 30
text = "Movimiento del personaje"
autowrap_mode = 2
justification_flags = 162

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 352.0
offset_top = 200.0
offset_right = 459.0
offset_bottom = 247.0
theme_override_font_sizes/font_size = 34
text = "Atacar"

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = 344.0
offset_top = 432.0
offset_right = 438.0
offset_bottom = 474.0
theme_override_font_sizes/font_size = 30
text = "Atacar"

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = 272.0
offset_top = 216.0
offset_right = 512.0
offset_bottom = 303.0
theme_override_font_sizes/font_size = 30
text = "Movimiento del personaje"
autowrap_mode = 2
justification_flags = 171

[node name="musicaButton" type="TextureButton" parent="."]
offset_left = 1088.0
offset_top = 8.0
offset_right = 1105.0
offset_bottom = 25.0
scale = Vector2(3.2, 3.2)
texture_normal = ExtResource("8_o4e8y")
script = ExtResource("9_of72q")

[node name="inicioButton" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 27.0
scale = Vector2(3, 3)
texture_normal = ExtResource("11_ga0hu")
texture_pressed = ExtResource("10_risc7")
texture_hover = ExtResource("10_risc7")
script = ExtResource("12_54rfk")

[connection signal="pressed" from="Flecha1Button" to="." method="_on_flecha_1_button_pressed"]
[connection signal="pressed" from="FlechaButton" to="." method="_on_flecha_button_pressed"]
[connection signal="pressed" from="musicaButton" to="musicaButton" method="_on_pressed"]
[connection signal="pressed" from="inicioButton" to="inicioButton" method="_on_pressed"]
